--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,4 +25,9 @@
         "promhttp",
         "relnamespace"
     ],
+    "sarif-viewer.connectToGithubCodeScanning": "on",
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.autopep8"
+    },
+    "python.formatting.provider": "none",
 }
