--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,10 +20,10 @@ jobs:
         run: docker ps 
 
       - name: Fixup git permission checking
-        run: docker exec devcontainer-rowdy-1 git config --global --add safe.directory ${PWD}
+        run: docker exec rowdy git config --global --add safe.directory ${PWD}
 
       - name: Build Binaries
-        run: docker exec -w ${PWD} devcontainer-rowdy-1 make -j build-all
+        run: docker exec -w ${PWD} rowdy make -j build-all
 
       - name: Create GitHub Release
         id: create_release
