--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,16 +12,16 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Start docker compose environment
-        run: docker compose -f .devcontainer/compose.yaml up -d
+        run: docker compose up -d
 
       - name: docker ps
         run: docker ps 
 
       - name: Fixup git permission checking
-        run: docker exec devcontainer-rowdy-1 git config --global --add safe.directory ${PWD}
+        run: docker exec rowdy git config --global --add safe.directory ${PWD}
 
       - name: Run tests
-        run: docker exec -w ${PWD} devcontainer-rowdy-1 make test
+        run: docker exec -w ${PWD} rowdy make test
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
