--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Start docker compose environment
-        run: docker compose -f .devcontainer/compose.yaml up -d
+        run: docker compose up -d
 
       - name: docker ps
         run: docker ps 
