--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
         run: docker exec rowdy git config --global --add safe.directory ${PWD}
 
       - name: Fixup golang cache directory for devcontainer
-        run: docker exec rowdy chmod -R 777 /go
+        run: docker exec rowdy sh -c 'mkdir /.cache && chmod -R 777 /go /.cache'
 
       - name: Run unit tests
         run: docker exec -u $(id -u) -w ${PWD} rowdy make test
