--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "Go",
-  "dockerComposeFile": "compose.yaml",
+  "dockerComposeFile": "../compose.yaml",
   "workspaceFolder": "${localWorkspaceFolder}",
   "service": "rowdy",
   "customizations": {
@@ -9,6 +9,8 @@
       "extensions": [
         "github.copilot",
         "github.vscode-github-actions",
+        "ms-azuretools.vscode-docker",
+        "MS-SarifVSCode.sarif-viewer",
         "ms-vsliveshare.vsliveshare",
         "streetsidesoftware.code-spell-checker"
       ]
