Add PostgreSQL support to the application
This commit introduces several modifications to the project:

- Added PostgreSQL as a new service in the Docker Compose configuration, with its client setup.
- Introduced a new test file, `002_postgresql.robot`, to validate PostgreSQL related operations.
- Included new keywords in `keywords.robot` to handle connections and operations with PostgreSQL.
- Modified `main.go` to allow switching between `cockroachdb` and `postgresql`, based on the database type provided as a command-line argument.
- Updated `.vscode/settings.json` with new terms to ensure they are recognized correctly by the spell checker.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,8 +18,10 @@
         "source.organizeImports": true
     },
     "cSpell.words": [
+        "cockroachdb",
         "CONNSTR",
         "crdb",
+        "dbtype",
         "nspname",
         "patrickmn",
         "promhttp",
